package model;

// Roles disponibles en el sistema 

public enum Role{
    ADMIN,
    STANDARD
}