' ---------------- Diagrama de clases ----------------
@startuml GestionClientes
skinparam classAttributeIconSize 0

package model {
    enum Role {
        + ADMIN
        + STANDARD
    }

    class Action {
        - description: String
        - timestamp: long
        + Action(description: String)
        + getDescription(): String
        + getTimestamp(): long
        + toString(): String
    }

    class User {
        - id: String
        - username: String
        - fullName: String
        - password: String
        - role: Role
        - actions: Action[]
        - actionCount: Integer
        - failedLoginAttempts: Integer
        - locked: boolean
        + static MAX_ACTIONS: Integer = 100
        + static MAX_FAILED_ATTEMPTS: Integer = 3
        + User(id:String, username:String, fullName:String, password:String, role:Role)
        + getId(): String
        + getUsername(): String
        + getFullName(): String
        + getRole(): Role
        + setFullName(fullName:String): void
        + checkPassword(password:String): boolean
        + changePassword(current:String, newPwd:String): boolean
        + setPasswordByAdmin(newPwd:String): void
        + addAction(a:Action): boolean
        + getActions(): Action[]
        + isLocked(): boolean
        + incrementFailedAttemptsAndLockIfNeeded(): boolean
        + resetFailedAttempts(): void
        + unlock(): void
        + toString(): String
    }
}

package service {
    class UserService {
        - users: User[]
        - userCount: Integer
        + static MAX_USERS: Integer = 50
        + UserService()
        - findIndexById(id:String): Integer
        - findIndexByUsername(username:String): Integer
        + createUser(actor:User, id:String, username:String, fullName:String, password:String, role:Role): boolean
        + findById(id:String): User
        + findByUsername(username:String): User
        + updateUser(actor:User, targetId:String, newFullName:String, currentPwd:String, newPwd:String): boolean
        + deleteUser(actor:User, targetId:String): boolean
        + registerAction(actor:User, targetId:String, description:String): boolean
        + showHistory(actor:User, targetId:String): void
        + unlockUser(actor:User, targetId:String): boolean
        + addInitialUser(u:User): boolean
    }

    class AuthService {
        - userService: UserService
        + AuthService(userService: UserService)
        + login(username:String, password:String): User
    }
}


' Relaciones
User "1" *-- "*" Action : contiene >
UserService ..> User : gestiona >
AuthService ..> UserService : usa >
App ..> AuthService
App ..> UserService


@enduml
